// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`design tokens > theme.css resolves every --hk-* value unchanged in cozy 1`] = `
{
  "--hk-accent": "#2f6e53",
  "--hk-accent-mark": "#3f8a6a",
  "--hk-accent-soft": "#dcefe5",
  "--hk-active-tint": "color-mix(in srgb, #2a2622 5%, transparent)",
  "--hk-attention": "#9a5b00",
  "--hk-attention-mark": "#f0a23a",
  "--hk-canvas": "#fbf9f5",
  "--hk-canvas-deep": "#f4f0e8",
  "--hk-caps-tracking": ".06em",
  "--hk-control-line": "color-mix(in srgb, #2a2622 32%, transparent)",
  "--hk-dark": "#2a2622",
  "--hk-dot": "5px",
  "--hk-ease": "cubic-bezier(.2, .7, .2, 1)",
  "--hk-faint": "#b3aca3",
  "--hk-fast": "120ms",
  "--hk-field-tint": "color-mix(in srgb, #2a2622 5%, transparent)",
  "--hk-field-tint-hover": "color-mix(in srgb, #2a2622 8%, transparent)",
  "--hk-font": ""Instrument Sans Variable", sans-serif",
  "--hk-glass": "rgb(255 254 251 / .92)",
  "--hk-hairline": "#e8e3db",
  "--hk-hover": "#efebe4",
  "--hk-ink": "#2a2622",
  "--hk-inverse": "#ffffff",
  "--hk-line": "#e8e3db",
  "--hk-line-strong": "#d9d3c9",
  "--hk-mono": ""Geist Mono Variable", ui-monospace, monospace",
  "--hk-negative": "#b93427",
  "--hk-negative-mark": "#d4483f",
  "--hk-panel": "#f5f2ec",
  "--hk-positive": "#206636",
  "--hk-positive-mark": "#3f9a5c",
  "--hk-radius-card": "12px",
  "--hk-radius-composer": "16px",
  "--hk-radius-control": "8px",
  "--hk-radius-pill": "999px",
  "--hk-radius-row": "8px",
  "--hk-reveal": "240ms",
  "--hk-ring": "16px",
  "--hk-secondary": "#66605a",
  "--hk-shadow": "0 14px 40px rgb(20 24 32 / .07), 0 1px 2px rgb(20 24 32 / .04)",
  "--hk-shadow-float": "0 6px 24px rgb(20 24 32 / .10)",
  "--hk-space-1": "4px",
  "--hk-space-12": "48px",
  "--hk-space-16": "64px",
  "--hk-space-2": "8px",
  "--hk-space-3": "12px",
  "--hk-space-4": "16px",
  "--hk-space-6": "24px",
  "--hk-space-8": "32px",
  "--hk-stroke": "1.5",
  "--hk-surface": "#fffefb",
  "--hk-tertiary": "#68625b",
  "--hk-text-base": "14px",
  "--hk-text-body": "14px",
  "--hk-text-caps": "11px",
  "--hk-text-chrome": "13px",
  "--hk-text-display": "22px",
  "--hk-text-heading": "22px",
  "--hk-text-input": "14px",
  "--hk-text-label": "13px",
  "--hk-text-md": "14px",
  "--hk-text-meta": "12px",
  "--hk-text-sm": "13px",
  "--hk-text-title": "15px",
  "--hk-text-user": "14px",
  "--hk-text-xs": "12px",
}
`;

exports[`design tokens > theme.css resolves every --hk-* value unchanged in dark 1`] = `
{
  "--hk-accent": "#6ea8ff",
  "--hk-accent-mark": "#6ea8ff",
  "--hk-accent-soft": "#1f2f47",
  "--hk-active-tint": "color-mix(in srgb, #f2f3f5 8%, transparent)",
  "--hk-attention": "#f4b95f",
  "--hk-attention-mark": "#f4b95f",
  "--hk-canvas": "#131518",
  "--hk-canvas-deep": "#0e1013",
  "--hk-caps-tracking": ".06em",
  "--hk-control-line": "color-mix(in srgb, #f2f3f5 40%, transparent)",
  "--hk-dark": "#f2f3f5",
  "--hk-dot": "5px",
  "--hk-ease": "cubic-bezier(.2, .7, .2, 1)",
  "--hk-faint": "#666c76",
  "--hk-fast": "120ms",
  "--hk-field-tint": "color-mix(in srgb, #f2f3f5 8%, transparent)",
  "--hk-field-tint-hover": "color-mix(in srgb, #f2f3f5 12%, transparent)",
  "--hk-font": ""Instrument Sans Variable", sans-serif",
  "--hk-glass": "rgb(28 31 36 / .92)",
  "--hk-hairline": "#262a30",
  "--hk-hover": "#262a31",
  "--hk-ink": "#f2f3f5",
  "--hk-inverse": "#131518",
  "--hk-line": "#262a30",
  "--hk-line-strong": "#343941",
  "--hk-mono": ""Geist Mono Variable", ui-monospace, monospace",
  "--hk-negative": "#ff7b73",
  "--hk-negative-mark": "#ff7b73",
  "--hk-panel": "#17191d",
  "--hk-positive": "#6cc78a",
  "--hk-positive-mark": "#6cc78a",
  "--hk-radius-card": "12px",
  "--hk-radius-composer": "16px",
  "--hk-radius-control": "8px",
  "--hk-radius-pill": "999px",
  "--hk-radius-row": "8px",
  "--hk-reveal": "240ms",
  "--hk-ring": "16px",
  "--hk-secondary": "#a5aab3",
  "--hk-shadow": "0 14px 40px rgb(0 0 0 / .35), 0 1px 2px rgb(0 0 0 / .3)",
  "--hk-shadow-float": "0 6px 24px rgb(0 0 0 / .40)",
  "--hk-space-1": "4px",
  "--hk-space-12": "48px",
  "--hk-space-16": "64px",
  "--hk-space-2": "8px",
  "--hk-space-3": "12px",
  "--hk-space-4": "16px",
  "--hk-space-6": "24px",
  "--hk-space-8": "32px",
  "--hk-stroke": "1.5",
  "--hk-surface": "#1c1f24",
  "--hk-tertiary": "#979da6",
  "--hk-text-base": "14px",
  "--hk-text-body": "14px",
  "--hk-text-caps": "11px",
  "--hk-text-chrome": "13px",
  "--hk-text-display": "22px",
  "--hk-text-heading": "22px",
  "--hk-text-input": "14px",
  "--hk-text-label": "13px",
  "--hk-text-md": "14px",
  "--hk-text-meta": "12px",
  "--hk-text-sm": "13px",
  "--hk-text-title": "15px",
  "--hk-text-user": "14px",
  "--hk-text-xs": "12px",
}
`;

exports[`design tokens > theme.css resolves every --hk-* value unchanged in darkCozy 1`] = `
{
  "--hk-accent": "#8fcbaf",
  "--hk-accent-mark": "#8fcbaf",
  "--hk-accent-soft": "#223a30",
  "--hk-active-tint": "color-mix(in srgb, #f3ede3 8%, transparent)",
  "--hk-attention": "#f4b95f",
  "--hk-attention-mark": "#f4b95f",
  "--hk-canvas": "#1a1815",
  "--hk-canvas-deep": "#141210",
  "--hk-caps-tracking": ".06em",
  "--hk-control-line": "color-mix(in srgb, #f3ede3 40%, transparent)",
  "--hk-dark": "#f3ede3",
  "--hk-dot": "5px",
  "--hk-ease": "cubic-bezier(.2, .7, .2, 1)",
  "--hk-faint": "#6f675c",
  "--hk-fast": "120ms",
  "--hk-field-tint": "color-mix(in srgb, #f3ede3 8%, transparent)",
  "--hk-field-tint-hover": "color-mix(in srgb, #f3ede3 12%, transparent)",
  "--hk-font": ""Instrument Sans Variable", sans-serif",
  "--hk-glass": "rgb(35 32 25 / .92)",
  "--hk-hairline": "#2e2a24",
  "--hk-hover": "#2e2a23",
  "--hk-ink": "#f3ede3",
  "--hk-inverse": "#1a1815",
  "--hk-line": "#2e2a24",
  "--hk-line-strong": "#3b362e",
  "--hk-mono": ""Geist Mono Variable", ui-monospace, monospace",
  "--hk-negative": "#ff7b73",
  "--hk-negative-mark": "#ff7b73",
  "--hk-panel": "#1e1c18",
  "--hk-positive": "#6cc78a",
  "--hk-positive-mark": "#6cc78a",
  "--hk-radius-card": "12px",
  "--hk-radius-composer": "16px",
  "--hk-radius-control": "8px",
  "--hk-radius-pill": "999px",
  "--hk-radius-row": "8px",
  "--hk-reveal": "240ms",
  "--hk-ring": "16px",
  "--hk-secondary": "#b3aa9c",
  "--hk-shadow": "0 14px 40px rgb(0 0 0 / .35), 0 1px 2px rgb(0 0 0 / .3)",
  "--hk-shadow-float": "0 6px 24px rgb(0 0 0 / .40)",
  "--hk-space-1": "4px",
  "--hk-space-12": "48px",
  "--hk-space-16": "64px",
  "--hk-space-2": "8px",
  "--hk-space-3": "12px",
  "--hk-space-4": "16px",
  "--hk-space-6": "24px",
  "--hk-space-8": "32px",
  "--hk-stroke": "1.5",
  "--hk-surface": "#232019",
  "--hk-tertiary": "#a2998c",
  "--hk-text-base": "14px",
  "--hk-text-body": "14px",
  "--hk-text-caps": "11px",
  "--hk-text-chrome": "13px",
  "--hk-text-display": "22px",
  "--hk-text-heading": "22px",
  "--hk-text-input": "14px",
  "--hk-text-label": "13px",
  "--hk-text-md": "14px",
  "--hk-text-meta": "12px",
  "--hk-text-sm": "13px",
  "--hk-text-title": "15px",
  "--hk-text-user": "14px",
  "--hk-text-xs": "12px",
}
`;

exports[`design tokens > theme.css resolves every --hk-* value unchanged in light 1`] = `
{
  "--hk-accent": "#1d63c8",
  "--hk-accent-mark": "#3d8bf5",
  "--hk-accent-soft": "#dce8fb",
  "--hk-active-tint": "color-mix(in srgb, #1f2226 5%, transparent)",
  "--hk-attention": "#9a5b00",
  "--hk-attention-mark": "#f0a23a",
  "--hk-canvas": "#fafafb",
  "--hk-canvas-deep": "#f2f4f8",
  "--hk-caps-tracking": ".06em",
  "--hk-control-line": "color-mix(in srgb, #1f2226 32%, transparent)",
  "--hk-dark": "#1f2226",
  "--hk-dot": "5px",
  "--hk-ease": "cubic-bezier(.2, .7, .2, 1)",
  "--hk-faint": "#a9aeb5",
  "--hk-fast": "120ms",
  "--hk-field-tint": "color-mix(in srgb, #1f2226 5%, transparent)",
  "--hk-field-tint-hover": "color-mix(in srgb, #1f2226 8%, transparent)",
  "--hk-font": ""Instrument Sans Variable", sans-serif",
  "--hk-glass": "rgb(255 255 255 / .92)",
  "--hk-hairline": "#e6e8ec",
  "--hk-hover": "#eef0f3",
  "--hk-ink": "#1f2226",
  "--hk-inverse": "#ffffff",
  "--hk-line": "#e6e8ec",
  "--hk-line-strong": "#d6d9df",
  "--hk-mono": ""Geist Mono Variable", ui-monospace, monospace",
  "--hk-negative": "#b93427",
  "--hk-negative-mark": "#d4483f",
  "--hk-panel": "#f4f5f7",
  "--hk-positive": "#206636",
  "--hk-positive-mark": "#3f9a5c",
  "--hk-radius-card": "12px",
  "--hk-radius-composer": "16px",
  "--hk-radius-control": "8px",
  "--hk-radius-pill": "999px",
  "--hk-radius-row": "8px",
  "--hk-reveal": "240ms",
  "--hk-ring": "16px",
  "--hk-secondary": "#5b6067",
  "--hk-shadow": "0 14px 40px rgb(20 24 32 / .07), 0 1px 2px rgb(20 24 32 / .04)",
  "--hk-shadow-float": "0 6px 24px rgb(20 24 32 / .10)",
  "--hk-space-1": "4px",
  "--hk-space-12": "48px",
  "--hk-space-16": "64px",
  "--hk-space-2": "8px",
  "--hk-space-3": "12px",
  "--hk-space-4": "16px",
  "--hk-space-6": "24px",
  "--hk-space-8": "32px",
  "--hk-stroke": "1.5",
  "--hk-surface": "#ffffff",
  "--hk-tertiary": "#646a73",
  "--hk-text-base": "14px",
  "--hk-text-body": "14px",
  "--hk-text-caps": "11px",
  "--hk-text-chrome": "13px",
  "--hk-text-display": "22px",
  "--hk-text-heading": "22px",
  "--hk-text-input": "14px",
  "--hk-text-label": "13px",
  "--hk-text-md": "14px",
  "--hk-text-meta": "12px",
  "--hk-text-sm": "13px",
  "--hk-text-title": "15px",
  "--hk-text-user": "14px",
  "--hk-text-xs": "12px",
}
`;
